examples/variables.pau
let a = 10;
var b = 12;

a := 15; // error
b := 15; // ok